<resources>

    <string name="app_name">AnimalFeeder</string>
    <string name="user_add">User add</string>
    <string name="user_error">The user can´t be created</string>
    <string name="name">Name</string>
    <string name="pet">Pet Name</string>
    <string name="save">Save</string>
    <string name="log_out">Log Out</string>
    <string name="correct_logout">You have left correctly</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="etError">You can´t save empty field</string>
    <string name="raspberryIp">Raspberry IP</string>
    <string name="next">Next</string>
    <string name="animal">Animal</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

</resources>
