<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.ProfileFragment">

    <ImageView
        android:id="@+id/imgvProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgvProfile">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilAnimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilName">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/animal" />
    </android.support.design.widget.TextInputLayout>


    <com.brouding.blockbutton.BlockButton
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="2dp"
        android:gravity="center"
        android:orientation="vertical"
        app:buttonColor="@color/blue"
        app:buttonDisabledColor="#999999"
        app:buttonDisabledGapColor="@color/cardview_dark_background"
        app:buttonGapColor="@color/cardview_dark_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnLogOut"
        app:layout_constraintTop_toBottomOf="@id/tilAnimal"
        app:pushDepthDp="6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textAllCaps="false" />

    </com.brouding.blockbutton.BlockButton>

    <com.brouding.blockbutton.BlockButton
        android:id="@+id/btnLogOut"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="2dp"
        android:gravity="center"
        android:orientation="vertical"
        app:buttonColor="@color/blue"
        app:buttonDisabledColor="#999999"
        app:buttonDisabledGapColor="@color/cardview_dark_background"
        app:buttonGapColor="@color/cardview_dark_background"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@id/tilAnimal"
        app:pushDepthDp="6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textAllCaps="false" />

    </com.brouding.blockbutton.BlockButton>


</android.support.constraint.ConstraintLayout>