<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:layout_margin="16dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SetUpOneFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvSetUpTwo"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/animal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="26dp"/>

    <ImageView
        android:id="@+id/ivSetUpTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/animal"
        app:layout_constraintTop_toBottomOf="@id/tvSetUpTwo"/>

    <com.brouding.blockbutton.BlockButton
        android:id="@+id/btnDog"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="2dp"
        android:gravity="center"
        android:orientation="vertical"
        app:buttonColor="@color/blue"
        app:buttonDisabledColor="#999999"
        app:buttonDisabledGapColor="@color/cardview_dark_background"
        app:buttonGapColor="@color/cardview_dark_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnCat"
        app:layout_constraintTop_toBottomOf="@id/ivSetUpTwo"
        app:pushDepthDp="6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog"
            android:textAllCaps="false" />

    </com.brouding.blockbutton.BlockButton>

    <com.brouding.blockbutton.BlockButton
        android:id="@+id/btnCat"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="2dp"
        android:gravity="center"
        android:orientation="vertical"
        app:buttonColor="@color/blue"
        app:buttonDisabledColor="#999999"
        app:buttonDisabledGapColor="@color/cardview_dark_background"
        app:buttonGapColor="@color/cardview_dark_background"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnDog"
        app:layout_constraintTop_toBottomOf="@id/ivSetUpTwo"
        app:pushDepthDp="6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat"
            android:textAllCaps="false" />

    </com.brouding.blockbutton.BlockButton>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="5dp"
        android:id="@+id/tilRaspberryIpSetUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnCat">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etPetNameSetUpTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pet"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <com.brouding.blockbutton.BlockButton
        android:id="@+id/btnSetUpTwo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:buttonColor="@color/blue"
        app:buttonDisabledColor="#999999"
        app:buttonDisabledGapColor="@color/cardview_dark_background"
        app:buttonGapColor="@color/cardview_dark_background"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:pushDepthDp="6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fui_next_default"
            android:textAllCaps="false" />

    </com.brouding.blockbutton.BlockButton>

</android.support.constraint.ConstraintLayout>